<resources>
    <string name="app_name">First-Test</string>
    <string name="activity_main_tv_main_text">Hello World !</string>
    <string name="main_btn_less">-1</string>
    <string name="main_btn_reset">Reset</string>
    <string name="main_btn_add">+1</string>
    <string name="main_tv_nb">0</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_reset">Réinitialiser l\'application</string>
    <string name="second_btn_return">Retour</string>
    <string name="main_btn_recycler_intent">RecyclerView</string>
    <string name="rv_item_image_cont_desc">Image of the color</string>
    <string name="book_rv_et_auteur">Auteur</string>
    <string name="book_rv_et_titre">Titre</string>
    <string name="book_rv_btn_add">Ajouter</string>
    <string name="rv_item_book_default_text">Texte par défaut</string>
    <string-array name="couleur">
        <item>rouge</item>
        <item>vert</item>
        <item>bleu</item>
        <item>jaune</item>
        <item>orange</item>
        <item>violet</item>
        <item>rose</item>
        <item>marron</item>
        <item>cyan</item>
        <item>gris</item>
    </string-array>
    <string-array name="description">
        <item>Lorem ipsum dolor si amet</item>
        <item>Lorem ipsum dolor si amet</item>
        <item>Lorem ipsum dolor si amet</item>
        <item>Lorem ipsum dolor si amet</item>
        <item>Lorem ipsum dolor si amet</item>
        <item>Lorem ipsum dolor si amet</item>
        <item>Lorem ipsum dolor si amet</item>
        <item>Lorem ipsum dolor si amet</item>
        <item>Lorem ipsum dolor si amet</item>
        <item>Lorem ipsum dolor si amet</item>
    </string-array>
    <string name="book_activity_last_modified_book">Dernier Livre modifié : %1$s | Note : %2$.1f</string>
    <string name="book_activity_last_modified_book_default">Cliquez sur un livre !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>